Adding Scene with Transparent Film to VSE Crashes Blender #57326

Closed
opened 2018-10-20 21:58:47 +02:00 by tonemgub · 5 comments
tonemgub commented 2018-10-20 21:58:47 +02:00 (Migrated from localhost:3001)

System Information
Manjaro Linux - GeForce GTX 1050

Blender Version
Broken: 2.8 8e3a680ebe
Worked: 2.79b 32432d91bbe

Short Description
Adding a scene with the film set to transparent to the video sequence editor crashes Blender.

Exact steps for others to reproduce the error

  • Open Blender
  • Set the film to transparent
  • Add a new scene and "Copy Settings"
  • Open the VSE
  • Add the first scene (the one with the transparent film) onto the timeline
  • Blender crashes

Attached Files

Output from the terminal: blender.terminal.txt

Crash log: blender.crash.txt

**System Information** Manjaro Linux - GeForce GTX 1050 **Blender Version** Broken: 2.8 8e3a680ebe3 Worked: 2.79b 32432d91bbe **Short Description** Adding a scene with the film set to transparent to the video sequence editor crashes Blender. **Exact steps for others to reproduce the error** - Open Blender - Set the film to transparent - Add a new scene and "Copy Settings" - Open the VSE - Add the first scene (the one with the transparent film) onto the timeline - Blender crashes **Attached Files** Output from the terminal: [blender.terminal.txt](https://archive.blender.org/developer/F5158084/blender.terminal.txt) Crash log: [blender.crash.txt](https://archive.blender.org/developer/F5158093/blender.crash.txt)
tonemgub commented 2018-10-20 21:58:47 +02:00 (Migrated from localhost:3001)
Author

Added subscriber: @tonemgub

Added subscriber: @tonemgub
Member

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk
Clément Foucault was assigned by Philipp Oeser 2018-10-22 11:30:12 +02:00
Member

Confirmed, GPUFrameBuffer *prev_fb = GPU_framebuffer_active_get() cant get previous framebuffer.
Before digging deeper: @fclem might know right away?

Confirmed, `GPUFrameBuffer *prev_fb = GPU_framebuffer_active_get()` cant get previous framebuffer. Before digging deeper: @fclem might know right away?
Author

This issue was referenced by 51b6e313de

This issue was referenced by 51b6e313de10c2495fde0d548df45f0d4b442d88

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57326
No description provided.