Fix T57326: Adding Scene with Transparent Film to VSE Crashes Blender

Previous Framebuffer can be NULL.